// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.arc;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/arc";

// AdbSideloadService provides RPC methods to be used by PerfBoot remote test.
service AdbSideloadService {

  // WaitUntilCPUCoolDown internally calls power.WaitUntilCPUCoolDown on DUT
  // and waits until CPU is cooled down.
  rpc EnableAdbSideloadFlag (google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc EnableAdbConfirm (google.protobuf.Empty) returns (google.protobuf.Empty) {}

}

