// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.security;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/security";

// BootLockboxService provide operations to bootlockboxd on the DUT.
service BootLockboxService {
  // New logs into a Chrome session as a fake user. Close must be called later
  // to clean up the associated resources.
  rpc NewChromeLogin (google.protobuf.Empty) returns (google.protobuf.Empty) {}

  // Close releases the resources obtained by New.
  rpc CloseChrome (google.protobuf.Empty) returns (google.protobuf.Empty) {}

  // Reads a value from Boot Lockbox.
  rpc Read (ReadBootLockboxRequest) returns (ReadBootLockboxResponse) {}

  // Stores a value to Boot Lockbox.
  rpc Store (StoreBootLockboxRequest) returns (google.protobuf.Empty) {}
}

message ReadBootLockboxRequest {
  string key = 1;
}

message ReadBootLockboxResponse {
  bytes value = 1;
}

message StoreBootLockboxRequest {
  string key = 1;
  bytes value = 2;
}
